[gd_scene load_steps=5 format=3 uid="uid://dxt6wl23ikbye"]

[ext_resource type="Script" path="res://projectiles/projectile.gd" id="1_n0kia"]
[ext_resource type="Texture2D" uid="uid://c48o22r75hnvh" path="res://projectiles/laser_green/assets/textures/green_laser.png" id="2_gbwev"]
[ext_resource type="AudioStream" uid="uid://b03hi75ctsevv" path="res://projectiles/laser_green/assets/sfx/green_laser.ogg" id="3_5m8kb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwniw"]
size = Vector2(4, 14)

[node name="LaserGreen" type="Area2D"]
collision_layer = 0
collision_mask = 6
monitorable = false
script = ExtResource( "1_n0kia" )

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource( "2_gbwev" )
offset = Vector2(0, 12)

[node name="SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( "3_5m8kb" )
autoplay = true

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( "RectangleShape2D_jwniw" )

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_laser_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
